--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       </div>
     </section>
   </main>
-    <!-- <div class="modal-overlay">
+    <div class="modal-overlay">
       <div class="modal">
         <div class="modal-exit-container">
           <button type="button" class="modal-exit-link">
@@ -394,7 +394,7 @@
         </div>
       </div>
     </div> -->
-  <!-- footer -->
+  <!-- footer
   <footer class="footer_p">
     <div class="container">
       <div class="div-footer">
