--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
           </form>
         </div>
       </div>
-    </div> -->
-  <!-- footer
+    </div> 
+ <!-- footer -->
   <footer class="footer_p">
     <div class="container">
       <div class="div-footer">
