--- a/index.html
+++ b/index.html
@@ -347,53 +347,6 @@
       </div>
     </section>
   </main>
-    <div class="modal-overlay">
-      <div class="modal">
-        <div class="modal-exit-container">
-          <button type="button" class="modal-exit-link">
-            <svg class="modal-exit-button" width="8" height="8">
-              <use href="./images/icons.svg#icon-button" class="usesvg"></use>
-            </svg>
-            </button>
-        </div>
-        <p class="modal-paragraph">Leave your contacts and we will call you back</p>
-        <div class="modal-container">
-          <form name="feedback_form" class="feedback-form">
-            <div class="modal-wrapper-container">
-              <label for="name" class="modal-container-item">Name</label>
-              <div class="modal-input-icon-wrapper">
-                <svg class="modal-input-icon" width="12" height="12">
-                  <use href="./images/icons.svg#icon-user" class="usesvg"></use>
-                </svg>
-                <input type="text" name="name" class="modal-container-input">
-              </div>
-            </div>
-              <div div class="modal-wrapper-container">
-                <label for="phone" class="modal-container-item">Phone</label>
-                  <div class="modal-input-icon-wrapper">
-                    <svg class="modal-input-icon" width="12" height="12">
-                      <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
-                    </svg>
-                    <input type="tel" class="modal-container-input">
-                  </div>
-              </div>
-              <div div class="modal-wrapper-container">
-                <label for="email" class="modal-container-item">Email</label>
-                  <div class="modal-input-icon-wrapper">
-                    <svg class="modal-input-icon" width="12" height="12">
-                      <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
-                    </svg>
-                    <input type="email" class="modal-container-input">
-                  </div>
-              </div>
-              <label for="Comment" class="modal-label-comment" >Comment</label>
-              <div><textarea placeholder="Text input" class="modal-container-comment"></textarea></div>
-            <label for="policy" class="checkbox-label"><input type="checkbox" checked><p class="checkbox-text">I accept the terms and conditions of the <a href="#" class="policy-link">Privacy Policy</p></a></label>
-            <div class="modal-button-container"><button type="button" class="modal-button">Send</button></div>
-          </form>
-        </div>
-      </div>
-    </div> 
  <!-- footer -->
   <footer class="footer_p">
     <div class="container">
@@ -439,16 +392,68 @@
       </div>
       <div class="footer-container-subscribe">
         <p class="footer-subscribe">Subscribe</p>
-        <input type="email" name="email" class="footer-email" placeholder="E-mail">
-        <button class="subscribe-button" type="button">
-          Subscribe
-          <svg class="footer-button-icon" width="24" height="20">
-            <use href="./images/icons.svg#icon-telegram" class="footer-icon"></use>
-          </svg>
-        </button>
+        <form class="footer-form">
+          <label name="subscribe">
+            <input type="email" name="email" class="footer-email" placeholder="E-mail">
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="footer-button-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-telegram" class="footer-icon"></use>
+              </svg>
+          </label>
+          </button>
+        </form>
       </div>
     </div>
   </footer>
+  <!-- modal -->
+  <div class="modal-overlay">
+    <div class="modal">
+      <div class="modal-exit-container">
+        <button type="button" class="modal-exit-link">
+          <svg class="modal-exit-button" width="8" height="8">
+            <use href="./images/icons.svg#icon-button" class="usesvg"></use>
+          </svg>
+          </button>
+      </div>
+      <p class="modal-paragraph">Leave your contacts and we will call you back</p>
+      <div class="modal-container">
+        <form name="feedback_form" class="feedback-form">
+          <div class="modal-wrapper-container">
+            <label for="name" class="modal-container-item">Name</label>
+            <div class="modal-input-icon-wrapper">
+              <svg class="modal-input-icon" width="12" height="12">
+                <use href="./images/icons.svg#icon-user" class="usesvg"></use>
+              </svg>
+              <input type="text" name="name" class="modal-container-input">
+            </div>
+          </div>
+            <div div class="modal-wrapper-container">
+              <label for="phone" class="modal-container-item">Phone</label>
+                <div class="modal-input-icon-wrapper">
+                  <svg class="modal-input-icon" width="12" height="12">
+                    <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
+                  </svg>
+                  <input type="tel" class="modal-container-input">
+                </div>
+            </div>
+            <div div class="modal-wrapper-container">
+              <label for="email" class="modal-container-item">Email</label>
+                <div class="modal-input-icon-wrapper">
+                  <svg class="modal-input-icon" width="12" height="12">
+                    <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
+                  </svg>
+                  <input type="email" class="modal-container-input">
+                </div>
+            </div>
+            <label for="Comment" class="modal-label-comment" >Comment</label>
+            <div><textarea placeholder="Text input" class="modal-container-comment"></textarea></div>
+          <label for="policy" class="checkbox-label"><input type="checkbox" checked><p class="checkbox-text">I accept the terms and conditions of the <a href="#" class="policy-link">Privacy Policy</p></a></label>
+          <div class="modal-button-container"><button type="button" class="modal-button">Send</button></div>
+        </form>
+      </div>
+    </div>
+  </div> 
 </body>
 
 </html>
