--- a/index.html
+++ b/index.html
@@ -413,7 +413,9 @@
             <use href="./images/icons.svg#icon-button" class="usesvg"></use>
           </svg>
         </button>
+      <div class="modal-top-paragraph">
       <p class="modal-paragraph">Leave your contacts and we will call you back</p>
+      </div>
       <div class="modal-container">
         <form class="feedback-form">
           <div class="modal-wrapper-container">
