--- a/index.html
+++ b/index.html
@@ -410,13 +410,13 @@
     <div class="modal">
         <button type="button" class="modal-exit-link">
           <svg class="modal-exit-button" width="8" height="8">
-            <use href="./images/icons.svg#icon-button" class="usesvg"></use>
+            <use href="./images/icons.svg#icon-button" class="modal-exit-button-cross"></use>
           </svg>
         </button>
+      <div class="modal-container">  
       <div class="modal-top-paragraph">
       <p class="modal-paragraph">Leave your contacts and we will call you back</p>
       </div>
-      <div class="modal-container">
         <form class="feedback-form">
           <div class="modal-wrapper-container">
             <label class="modal-container-item">Name</label>
