--- a/index.html
+++ b/index.html
@@ -416,30 +416,30 @@
       <p class="modal-paragraph">Leave your contacts and we will call you back</p>
         <form class="feedback-form">
           <div class="modal-wrapper-container">
-            <label class="modal-container-item">Name</label>
+            <label class="modal-container-item" for="user-name">Name</label>
             <div class="modal-input-icon-wrapper">
+              <input type="text" name="name" class="modal-container-input" id="user-name">
               <svg class="modal-input-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-user" class="usesvg"></use>
               </svg>
-              <input type="text" name="name" class="modal-container-input">
             </div>
           </div>
             <div class="modal-wrapper-container">
               <label class="modal-container-item">Phone</label>
                 <div class="modal-input-icon-wrapper">
+                  <input type="tel" class="modal-container-input">
                   <svg class="modal-input-icon" width="12" height="12">
                     <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
                   </svg>
-                  <input type="tel" class="modal-container-input">
                 </div>
             </div>
             <div class="modal-wrapper-container">
               <label class="modal-container-item">Email</label>
                 <div class="modal-input-icon-wrapper">
+                  <input type="email" class="modal-container-input">
                   <svg class="modal-input-icon" width="12" height="12">
                     <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
                   </svg>
-                  <input type="email" class="modal-container-input">
                 </div>
             </div>
             <label class="modal-label-comment" >Comment</label>
