--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
           <div class="modal-wrapper-container">
             <label class="modal-container-item" for="user-name">Name</label>
             <div class="modal-input-icon-wrapper">
-              <input type="text" name="name" class="modal-container-input" id="user-name">
-              <svg class="modal-input-icon" width="12" height="12">
+              <input type="text" name="user-name" class="modal-container-input" id="user-name">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user" class="usesvg"></use>
               </svg>
             </div>
@@ -428,7 +428,7 @@
               <label class="modal-container-item">Phone</label>
                 <div class="modal-input-icon-wrapper">
                   <input type="tel" class="modal-container-input">
-                  <svg class="modal-input-icon" width="12" height="12">
+                  <svg class="modal-input-icon" width="18" height="24">
                     <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
                   </svg>
                 </div>
@@ -437,7 +437,7 @@
               <label class="modal-container-item">Email</label>
                 <div class="modal-input-icon-wrapper">
                   <input type="email" class="modal-container-input">
-                  <svg class="modal-input-icon" width="12" height="12">
+                  <svg class="modal-input-icon" width="18" height="24">
                     <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
                   </svg>
                 </div>
