--- a/index.html
+++ b/index.html
@@ -442,8 +442,10 @@
                   </svg>
                 </div>
             </div>
-            <label class="modal-label-comment" >Comment</label>
-            <div><textarea placeholder="Text input" class="modal-container-comment"></textarea></div>
+            <div>
+            <label class="modal-label-comment" for="comment-user">Comment</label>
+            <textarea name="comment-user" placeholder="Text input" class="modal-container-comment"></textarea>
+            </div>
           <label class="checkbox-label"><input type="checkbox" checked>I accept the terms and conditions of the <a href="#" class="policy-link">Privacy Policy</a></label>
           <div class="modal-button-container"><button type="button" class="modal-button">Send</button></div>
         </form>
