--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                   </svg>
                 </div>
             </div>
-            <div>
+            <div class="modal-wrapper-container-comment">
             <label class="modal-label-comment" for="comment-user">Comment</label>
             <textarea name="comment-user" placeholder="Text input" class="modal-container-comment"></textarea>
             </div>
