--- a/index.html
+++ b/index.html
@@ -424,32 +424,40 @@
               </svg>
             </div>
           </div>
-            <div class="modal-wrapper-container">
-              <label class="modal-container-item">Phone</label>
-                <div class="modal-input-icon-wrapper">
-                  <input type="tel" class="modal-container-input">
-                  <svg class="modal-input-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
-                  </svg>
-                </div>
+          <div class="modal-wrapper-container">
+            <label class="modal-container-item">Phone</label>
+            <div class="modal-input-icon-wrapper">
+              <input type="tel" class="modal-container-input">
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
+              </svg>
             </div>
-            <div class="modal-wrapper-container">
-              <label class="modal-container-item">Email</label>
-                <div class="modal-input-icon-wrapper">
-                  <input type="email" class="modal-container-input">
-                  <svg class="modal-input-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
-                  </svg>
-                </div>
+          </div>
+          <div class="modal-wrapper-container">
+            <label class="modal-container-item">Email</label>
+            <div class="modal-input-icon-wrapper">
+              <input type="email" class="modal-container-input">
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
+              </svg>
             </div>
-            <div class="modal-wrapper-container-comment">
+          </div>
+          <div class="modal-wrapper-container-comment">
             <label class="modal-label-comment" for="comment-user">Comment</label>
             <textarea name="comment-user" placeholder="Text input" class="modal-container-comment"></textarea>
-            </div>
-          <label class="checkbox-label"><input type="checkbox" checked>I accept the terms and conditions of the <a href="#" class="policy-link">Privacy Policy</a></label>
-          <div class="modal-button-container"><button type="button" class="modal-button">Send</button></div>
+          </div>
+          <div class="modal-button-container">
+            <input type="checkbox" class="visually-hidden" checked id="user-privacy">
+            <label class="checkbox-label" for="user-privacy" value="true"><span class="check">
+              <svg class="modal-checked-button" width="10" height="8">
+                <use href="./images/icons.svg#icon-button" class="modal-exit-button-cross"></use>
+              </svg>
+            </span>I accept the terms and conditions of the<a href="#" class="policy-link">Privacy Policy</a>
+            </label>
+            <button type="button" class="modal-button">Send</button>
+          </div>
         </form>
-    </div>
+        </div>
   </div> 
 </body>
 
