--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
           </div>
           <div class="modal-wrapper-container-comment">
             <label class="modal-label-comment" for="comment-user">Comment</label>
-            <textarea name="comment-user" placeholder="Text input" class="modal-container-comment"></textarea>
+            <textarea for="comment-user" placeholder="Text input" class="modal-container-comment"></textarea>
           </div>
           <div class="modal-button-container">
-            <input type="checkbox" class="visually-hidden" checked id="user-privacy">
-            <label class="checkbox-label" for="user-privacy" value="true"><span class="check">
+            <input type="checkbox" class="visually-hidden" checked for="user-privacy">
+            <label class="checkbox-label" id="user-privacy" value="true"><span class="check">
               <svg class="modal-checked-button" width="10" height="8">
                 <use href="./images/icons.svg#icon-button" class="modal-exit-button-cross"></use>
               </svg>
