--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <div class="modal">
         <button type="button" class="modal-exit-link">
           <svg class="modal-exit-button" width="8" height="8">
-            <use href="./images/icons.svg#icon-button" class="modal-exit-button-cross"></use>
+            <use href="./images/icons.svg#icon-check-mark" class="modal-exit-button-cross"></use>
           </svg>
         </button> 
       <p class="modal-paragraph">Leave your contacts and we will call you back</p>
