--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <div class="modal">
         <button type="button" class="modal-exit-link">
           <svg class="modal-exit-button" width="8" height="8">
-            <use href="./images/icons.svg#icon-check-mark" class="modal-exit-button-cross"></use>
+            <use href="./images/icons.svg#icon-button" class="modal-exit-button-cross"></use>
           </svg>
         </button> 
       <p class="modal-paragraph">Leave your contacts and we will call you back</p>
@@ -443,14 +443,14 @@
             </div>
           </div>
           <div class="modal-wrapper-container-comment">
-            <label class="modal-label-comment" id="comment-user">Comment</label>
-            <textarea name="comment-user" placeholder="Text input" class="modal-container-comment"></textarea>
+            <label class="modal-container-item" id="user-comment">Comment</label>
+            <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-container-comment"></textarea>
           </div>
           <div class="modal-button-container">
-            <input type="checkbox" class="visually-hidden" checked name="user-privacy" value="true">
-            <label class="checkbox-label" id="user-privacy"><span class="check">
+            <input type="checkbox" class="visually-hidden" checked id="user-privacy" name="user-privacy" value="true">
+            <label class="checkbox-label" for="user-privacy"><span class="check">
               <svg class="modal-checked-button" width="10" height="8">
-                <use href="./images/icons.svg#icon-button" class="modal-exit-button-cross"></use>
+                <use href="./images/icons.svg#icon-check-mark" class="modal-exit-button-cross"></use>
               </svg>
             </span>I accept the terms and conditions of the<a href="#" class="policy-link">Privacy Policy</a>
             </label>
