--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             </div>
           </div>
           <div class="modal-wrapper-container-comment">
-            <label class="modal-container-item" id="user-comment">Comment</label>
+            <label class="modal-container-item" for="user-comment">Comment</label>
             <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-container-comment"></textarea>
           </div>
           <div class="modal-button-container">
