--- a/index.html
+++ b/index.html
@@ -425,18 +425,18 @@
             </div>
           </div>
           <div class="modal-wrapper-container">
-            <label class="modal-container-item">Phone</label>
+            <label class="modal-container-item" for="phone">Phone</label>
             <div class="modal-input-icon-wrapper">
-              <input type="tel" class="modal-container-input">
+              <input type="tel" id="phone" class="modal-container-input">
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
               </svg>
             </div>
           </div>
           <div class="modal-wrapper-container">
-            <label class="modal-container-item">Email</label>
+            <label class="modal-container-item" for="emal">Email</label>
             <div class="modal-input-icon-wrapper">
-              <input type="email" class="modal-container-input">
+              <input type="email" id="email" class="modal-container-input">
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
               </svg>
