--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             </div>
           </div>
           <div class="modal-wrapper-container">
-            <label class="modal-container-item" for="emal">Email</label>
+            <label class="modal-container-item" for="email">Email</label>
             <div class="modal-input-icon-wrapper">
               <input type="email" id="email" class="modal-container-input">
               <svg class="modal-input-icon" width="18" height="24">
