--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           </div>
           <div class="modal-button-container">
             <input type="checkbox" class="visually-hidden checkbox" checked id="user-privacy" name="user-privacy" value="true">
-            <label class="checkbox-label" for="user-privacy"><span class="check span">
+            <label class="checkbox-label" for="user-privacy"><span class="check-span">
               <svg class="modal-checked-button" width="10" height="8">
                 <use href="./images/icons.svg#icon-check-mark" class="modal-exit-button-cross"></use>
               </svg>
