--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             </span>I accept the terms and conditions of the<a href="#" class="policy-link">Privacy Policy</a>
             </label>
           </div>
-          <button type="button" class="modal-button">Send</button>
+          <button type="submit" class="modal-button">Send</button>
         </form>
         </div>
   </div> 
