--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           <div class="modal-wrapper-container">
             <label class="modal-container-item" for="phone">Phone</label>
             <div class="modal-input-icon-wrapper">
-              <input type="tel" id="phone" class="modal-container-input">
+              <input type="tel" id="phone" name="phone" class="modal-container-input">
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone" class="usesvg"></use>
               </svg>
@@ -436,7 +436,7 @@
           <div class="modal-wrapper-container">
             <label class="modal-container-item" for="email">Email</label>
             <div class="modal-input-icon-wrapper">
-              <input type="email" id="email" class="modal-container-input">
+              <input type="email" id="email" name="email" class="modal-container-input">
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-mail" class="usesvg"></use>
               </svg>
