--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-container-comment"></textarea>
           </div>
           <div class="modal-button-container">
-            <input type="checkbox" class="visually-hidden checkbox" checked id="user-privacy" name="user-privacy" value="true">
+            <input type="checkbox" class="visually-hidden checkbox" id="user-privacy" name="user-privacy" value="true">
             <label class="checkbox-label" for="user-privacy"><span class="check-span">
               <svg class="modal-checked-button" width="10" height="8">
                 <use href="./images/icons.svg#icon-check-mark" class="modal-exit-button-cross"></use>
